--- a/app/src/main/res/drawable/border_white.xml
+++ b/app/src/main/res/drawable/border_white.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid
+    <stroke
+        android:width="2dp"
         android:color="@android:color/white"
         />
 
+
     <corners
-        android:radius="5dp" />
-
-
+        android:radius="3dp" />
+    <padding
+        android:left="5dp"
+        android:top="5dp"
+        android:right="5dp"
+        android:bottom="10dp" />
 </shape>
