--- a/app/src/main/res/layout/view_item_selector.xml
+++ b/app/src/main/res/layout/view_item_selector.xml
@@ -32,7 +32,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
-                android:background="@drawable/border_white"
+                android:background="@drawable/border_white_solid"
                 android:orientation="horizontal"
 
                 app:layout_constraintTop_toTopOf="parent"
