--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -302,6 +302,7 @@
                 />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/bill_items_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
