--- a/app/src/main/res/layout/card_item_selector.xml
+++ b/app/src/main/res/layout/card_item_selector.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/border_white"
     android:padding="7dp"
+    android:gravity="center"
+    android:layout_margin="10dp"
     android:textColor="@android:color/white"
     android:textSize="18sp"
     android:textStyle="bold"
