--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -343,7 +343,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
-                    tools:text="15000" />
+                    android:text="@{viewModel.totalAmount}" />
 
 
                 <TextView
@@ -362,14 +362,13 @@
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/black"
                     android:textStyle="bold"
-                    tools:text="15000"
+                    android:text="@={``+viewModel.received}"
                     />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -387,7 +386,8 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
-                    tools:text="0" />
+                    android:text="@{String.valueOf(viewModel.balance)}"
+                    />
 
                 <Button
                     android:layout_width="0dp"
