--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -213,7 +213,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Reset"
-                    android:onClick="reset"
+                    android:onClick="@{()->viewModel.reset()}"
                     android:textAllCaps="false" />
 
             </LinearLayout>
