--- a/app/src/main/res/layout/card_bill_item.xml
+++ b/app/src/main/res/layout/card_bill_item.xml
@@ -69,6 +69,7 @@
                     android:textSize="16sp"
                     android:ems="5"
                     android:text="0.0"
+                    android:textColor="@android:color/black"
                     android:enabled="false"
                     />
 
@@ -114,6 +115,7 @@
                     android:ems="5"
                     android:text="0.0"
                     android:enabled="false"
+                    android:textColor="@android:color/black"
                     android:textSize="16sp"
                     />
 
@@ -167,15 +169,13 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="5"
+                    android:textColor="@android:color/black"
                     android:text="0"
                     android:textSize="16sp"
                     android:enabled="false"
                     />
 
             </LinearLayout>
-
-
-
 
         </LinearLayout>
 
