--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -394,11 +394,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Save"
+                    android:onClick="saveBill"
                     />
 
-
             </LinearLayout>
-
 
         </LinearLayout>
 
