--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -17,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".print.PrintActivity">
+        tools:context=".print.printBill.PrintBillActivity">
 
         <LinearLayout
             android:id="@+id/header"
@@ -128,7 +128,7 @@
 
                 </LinearLayout>
 
- <LinearLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
