--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -17,6 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusableInTouchMode="true"
         tools:context=".print.printBill.PrintBillActivity">
 
         <LinearLayout
@@ -48,10 +49,44 @@
 
         </LinearLayout>
 
+        <FrameLayout
+            android:id="@+id/bill_header"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_chevron_left"
+                android:tint="@android:color/black"
+                />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{String.valueOf(bill.billId)}"
+                tools:text="01"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:ems="4"
+                android:textColor="@android:color/black"
+                />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_chevron_right"
+                android:layout_gravity="end"
+                android:tint="@android:color/black"
+                />
+
+        </FrameLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintTop_toBottomOf="@id/bill_header"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
